rudimentary protection against Aut2Exe

--- a/test1337/test1337.vcxproj.filters
+++ b/test1337/test1337.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="encrypt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="hwbp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
