--- a/test1337/test1337.vcxproj
+++ b/test1337/test1337.vcxproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="encrypt.h" />
+    <ClInclude Include="hwbp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
